[package]
name = "rusty-lsm"
version = "0.1.0"
edition = "2021" # 2024 isn't fully stable in all channels yet, but we will write forward-compatible code.

[dependencies]
tokio = { version = "1.36", features = ["full"] }

crossbeam-skiplist = "0.1"
crossbeam-utils = "0.8"
parking_lot = "0.12"
bytes = "1.5"
rkyv = { version = "0.7", features = ["validation"] }

thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

crc32fast = "1.3"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.10"
