[package]
name = "rusty-lsm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
bloomfilter = { version = "1.0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-skiplist = "0.1"
crossbeam-utils = "0.8"
parking_lot = "0.12"
bytes = "1.5"
rkyv = { version = "0.7", features = ["validation"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1.3"
memmap2 = "0.9"
lru = "0.12"
snap = "1"
bincode = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
